--- a/app.css
+++ b/app.css
@@ -29,7 +29,7 @@ body{
     -ms-overflow-style: none; 
     scrollbar-width: none; 
 }
-#terminal::-webkit-scrollbar { 
+#terminal::-webkit-scrollbar, #infobox::-webkit-scrollbar { 
     display: none;
 }
 
@@ -84,6 +84,57 @@ body{
 }
 #autocomplete span{
     display: block;
+}
+
+#infobox, #enablegui{
+    position: fixed;
+    height: auto;
+    left: 35vw;
+    top: 15vh;
+    background: #0a0a0a;
+    border: 1px solid white;
+    color: #fff;
+    overflow: auto;
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+    padding:5px 20px;
+    padding-bottom: 100px;
+    display: none;
+    text-align: center;
+    box-shadow: 13px 13px 0px black;
+}
+
+#infobox span{
+    padding: 5px;
+    display: block;
+    z-index: 3;
+    position: absolute;
+    bottom: 0px;
+    background: #fff;
+    color: #000;
+    width: 100%;
+    left: -5px;
+    cursor: pointer;
+}
+
+#enablegui{
+    top:35vh;
+    display: block;
+    padding-bottom: 10px;
+}
+#enablegui p{
+    display:block;
+    width: 100%;
+    margin:20px 0px;
+}
+#enablegui span{
+    display:inline-block;
+    width: calc(40% - 10px);
+    padding:5px;
+    margin: 5px;
+    background:#fff;
+    color: #000;
+    cursor:pointer;
 }
 
 @media screen and (max-width: 600px) {
