--- a/app.css
+++ b/app.css
@@ -1,3 +1,4 @@
+/* Global CSS */
 * {
     font-family: monospace;
     font-weight: bold;
@@ -10,6 +11,15 @@ body{
     background:#0a0a0a;
 }
 
+img{
+    width: 150px;
+    height: 150px;
+}
+a{
+    color: #fff;
+}
+
+/* Terminal design */
 #terminal, #terminalInput{
     position:fixed;
     background-color: transparent;
@@ -53,6 +63,7 @@ body{
     font-weight:bold;
 }
 
+/* Links rendering */
 #links{
     position:fixed;
     bottom:60px;
@@ -72,6 +83,7 @@ body{
     z-index: 1;
 }
 
+/* Autocomplete */
 #autocomplete{
     position:fixed;
     bottom:60px;
@@ -86,11 +98,13 @@ body{
     display: block;
 }
 
+/* Infobox / modals */
 #infobox, #enablegui{
     position: fixed;
     height: auto;
     left: 35vw;
-    top: 15vh;
+    top: 5vh;
+    max-height: 80vh;
     background: #0a0a0a;
     border: 1px solid white;
     color: #fff;
@@ -98,25 +112,53 @@ body{
     -ms-overflow-style: none; 
     scrollbar-width: none; 
     padding:5px 20px;
-    padding-bottom: 100px;
     display: none;
-    text-align: center;
+    text-align: left;
     box-shadow: 13px 13px 0px black;
+    padding-bottom:50px;
 }
 
 #infobox span{
-    padding: 5px;
-    display: block;
-    z-index: 3;
+    text-align: center;
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 20px;
+    margin: 0;
+    padding: 5px;
+    display: inline-block;
     background: #fff;
     color: #000;
-    width: 100%;
-    left: -5px;
     cursor: pointer;
 }
 
+#infobox p{
+    max-height: 50vh;
+    overflow: auto;
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+    padding-right:5px;
+}
+
+/* Infobox paraph scrollbar */
+#infobox p::-webkit-scrollbar-track
+{
+	background-color: #0a0a0a;
+}
+
+#infobox p::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #0a0a0a;
+}
+
+#infobox p::-webkit-scrollbar-thumb
+{
+	background-color: #fff;
+}
+
+/* GUI modal */
 #enablegui{
     top:35vh;
     display: block;
@@ -137,6 +179,7 @@ body{
     cursor:pointer;
 }
 
+/* Responsive */
 @media screen and (max-width: 600px) {
     body{
         overflow: hidden;
